@startuml
'https://plantuml.com/class-diagram

class Application {
+ public void start(Stage primaryStage)
+ public static void main(String[] args)
}
class Item{
+ public String toString(){
+ public void setDescription(String description)
+ public LocalDate getDate()
+ public void setDate(LocalDate date)
+ public Boolean getComplete()
+ public void setComplete(Boolean complete)
+ public String getCompletedBoolean(Boolean complete)
+ public Item(String description, LocalDate date, Boolean complete)
+ public String getDescription()
}
class ListController {
+ public void initialize(URL url, ResourceBundle rb)
+ public void refresh()
+ public void addItem(Event e)
+ public void removeItem(Event e)
+ public void clearAll(Event e)
+ public void listViewSelectedItem()
+ public void updateItem(Event e)
+ public void exportList(javafx.scene.input.MouseEvent mouseEvent)
+ public void importList(javafx.scene.input.MouseEvent mouseEvent)
+ public void markComplete(Event e)
+ public void markIncomplete(Event e)
+ public void displayComplete(Event e)
+ public void displayIncomplete(Event e)
+ public void displayAll(Event e)
}


Application --|> ListController
ListController --|> Item

@enduml